...
    }
    enum Home {
        static let balanceCardButton = "home.balanceCardButton"
        static let balanceLabel = "home.balanceLabel"
        static let buyButton = "home.buyButton"
        static let currencyButton = "home.currencyButton"
        static let headerLabel = "home.headerLabel"
        static let headerSpinner = "home.headerSpinner"
        static let mapButton = "home.mapButton"
        static let profitButton = "home.profitButton"
        static let profitLabel = "home.profitLabel"
        static let receiveButton = "home.receiveButton"
        static let sendButton = "home.sendButton"
        static let syncStatusButton = "home.syncStatusButton"
...
        static let academyButton = "nav.academyButton"
        static let settingsButton = "nav.settingsButton"
        static let walletButton = "nav.walletButton"
    }
    enum Pin {
        static let button0 = "pin.button0"
        static let button1 = "pin.button1"
        static let button2 = "pin.button2"
        static let button3 = "pin.button3"
        static let button4 = "pin.button4"
        static let button5 = "pin.button5"
        static let button6 = "pin.button6"
        static let button7 = "pin.button7"
        static let button8 = "pin.button8"
        static let button9 = "pin.button9"
        static let buttonBackspace = "pin.buttonBackspace"
        static let confirmButton = "pin.confirmButton"
        static let pinTextField = "pin.pinTextField"
        static let restoreButton = "pin.restoreButton"
    }
    enum Profits {
        static let subtitleLabel = "profits.subtitleLabel"
        static let totalInvestmentLabel = "profits.totalInvestmentLabel"
...
                static let continueButton = "signup.create.ready.continueButton"
                static let skipButton = "signup.create.ready.skipButton"
                static let topLabelOne = "signup.create.ready.topLabelOne"
            }
            enum Start {
                static let articleButton = "signup.create.start.articleButton"
                static let createWalletButton = "signup.create.start.createWalletButton"
                static let headerLabel = "signup.create.start.headerLabel"
                static let restoreButton = "signup.create.start.restoreButton"
            }
            enum Verify {
                static let backButton = "signup.create.verify.backButton"
                static let field1 = "signup.create.verify.field1"
                static let field2 = "signup.create.verify.field2"
                static let field3 = "signup.create.verify.field3"
...
                static let label3 = "signup.create.verify.label3"
                static let nextButton = "signup.create.verify.nextButton"
                static let topLabel = "signup.create.verify.topLabel"
            }
        }
        enum Restore {
            static let field1 = "signup.restore.field1"
            static let field10 = "signup.restore.field10"
            static let field11 = "signup.restore.field11"
            static let field12 = "signup.restore.field12"
            static let field2 = "signup.restore.field2"
            static let field3 = "signup.restore.field3"
            static let field4 = "signup.restore.field4"
            static let field5 = "signup.restore.field5"
            static let field6 = "signup.restore.field6"
            static let field7 = "signup.restore.field7"
            static let field8 = "signup.restore.field8"
            static let field9 = "signup.restore.field9"
            static let nextButton = "signup.restore.nextButton"
            enum PinConfirm {
                static let topLabel = "signup.restore.pinConfirm.topLabel"
            }
            enum PinSet {
                static let topLabel = "signup.restore.pinSet.topLabel"
            }
            static let removeWalletButton = "signup.restore.removeWalletButton"
            static let topLabel = "signup.restore.topLabel"
        }
    }
    enum Swap {
        static let amountTextField = "swap.amountTextField"
        static let fromButton = "swap.fromButton"
        static let fromLabel = "swap.fromLabel"
...
        static let swapStatusButton = "transaction.swapStatusButton"
        static let transferFeeButton = "transaction.transferFeeButton"
        static let urlIdButton = "transaction.urlIdButton"
        static let yellowCard = "transaction.yellowCard"
    }
    enum Unlock {
        static let topLabel = "unlock.topLabel"
    }
    enum Value {
        static let currentValueLabel = "value.currentValueLabel"
        static let fiveYearsButton = "value.fiveYearsButton"
        static let graphValueLabel = "value.graphValueLabel"
        static let graphView = "value.graphView"
...
